Fix a change with nav alignment.

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ nav ul{
     text-align: center;
     background-color: darkgoldenrod;  
     border-radius: 10px;  
+    margin-right:30px;
 }
 
 nav li{
